src/test/ui/parser/issue-34255-1.stderr
error: invalid `struct` delimiters or `fn` call arguments
  --> $DIR/issue-34255-1.rs:8:5
   |
LL |     Test::Drill(field: 42);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
help: if `Test::Drill` is a struct, use braces as delimiters
   |
LL |     Test::Drill { field: 42 };
   |                 ~           ~
help: if `Test::Drill` is a function, use the arguments directly
   |
LL -     Test::Drill(field: 42);
LL +     Test::Drill(42);
   | 

error: aborting due to previous error

